--- a/.hgignore
+++ b/.hgignore
@@ -2,3 +2,4 @@ syntax: glob
 bin/Debug/lang/en.ini
 bin/Release/database/Impuls.mdb
 bin/Release/database/basekomp(clear)!_.mdb
+bin/Release/base.ini
