--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -356,6 +356,7 @@
     <Compile Include="MODULES\MOD_INVENT.vb" />
     <Compile Include="MODULES\MOD_LOAD_WMI.vb" />
     <Compile Include="MODULES\MOD_REF_TREE.vb" />
+    <Compile Include="MODULES\MOD_SEARCHE.vb" />
     <Compile Include="MODULES\MOD_SYS_PRELOAD.vb" />
     <Compile Include="MODULES\MOD_ADD_FUNCTION.vb" />
     <Compile Include="MODULES\MOD_DSP.vb" />
