--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -366,6 +366,7 @@
     <Compile Include="MODULES\MOD_LOAD_WMI.vb" />
     <Compile Include="MODULES\MOD_REF_TREE.vb" />
     <Compile Include="MODULES\MOD_SEARCHE.vb" />
+    <Compile Include="MODULES\MOD_SENDMAIL.vb" />
     <Compile Include="MODULES\MOD_SNMP.vb" />
     <Compile Include="MODULES\MOD_SYS_PRELOAD.vb" />
     <Compile Include="MODULES\MOD_ADD_FUNCTION.vb" />
