--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -7,9 +7,9 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{F93C984C-6849-4FE0-8B26-704F87F113B0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>basekomp_net.My.MyApplication</StartupObject>
-    <RootNamespace>basekomp_net</RootNamespace>
-    <AssemblyName>basekomp_net</AssemblyName>
+    <StartupObject>basekomp.My.MyApplication</StartupObject>
+    <RootNamespace>basekomp</RootNamespace>
+    <AssemblyName>basekomp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
     <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
@@ -64,7 +64,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>basekomp_net.xml</DocumentationFile>
+    <DocumentationFile>basekomp.xml</DocumentationFile>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42030,42032,42036,42104,42108,42109,42353,42354,42355</NoWarn>
     <WarningsAsErrors>
     </WarningsAsErrors>
@@ -79,7 +79,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>false</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>basekomp_net.xml</DocumentationFile>
+    <DocumentationFile>basekomp.xml</DocumentationFile>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42030,42032,42036,42104,42108,42109,42353,42354,42355</NoWarn>
     <WarningsAsErrors>
     </WarningsAsErrors>
@@ -95,7 +95,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x86\Debug\</OutputPath>
-    <DocumentationFile>basekomp_net.xml</DocumentationFile>
+    <DocumentationFile>basekomp.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42030,42032,42036,42104,42108,42109,42353,42354,42355</NoWarn>
     <DebugType>full</DebugType>
@@ -108,7 +108,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x86\Release\</OutputPath>
-    <DocumentationFile>basekomp_net.xml</DocumentationFile>
+    <DocumentationFile>basekomp.xml</DocumentationFile>
     <WarningLevel>1</WarningLevel>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42030,42032,42036,42104,42108,42109,42353,42354,42355</NoWarn>
     <DebugType>pdbonly</DebugType>
