--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -144,7 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
-    <Compile Include="CLASSES\IniFile.vb" />
+    <Compile Include="FORMS\IniFile.vb" />
     <Compile Include="FORMS\frmAbout.Designer.vb">
       <DependentUpon>frmAbout.vb</DependentUpon>
     </Compile>
@@ -614,7 +614,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Service References\" />
+    <Folder Include="CLASSES\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
