--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -123,6 +123,16 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Release\Ionic.Zip.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>bin\Release\Microsoft.Office.Interop.Excel.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Word, Version=12.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+      <SpecificVersion>False</SpecificVersion>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+      <HintPath>bin\Release\Microsoft.Office.Interop.Word.dll</HintPath>
+    </Reference>
     <Reference Include="SnmpSharpNet">
       <HintPath>.\SnmpSharpNet.dll</HintPath>
     </Reference>
