?????? 1.7.5.2 beta - ?????????????? ? ??????????? "?????????????" http://bko.shatki.info/forum/index.php?topic=609.msg4069;topicseen#msg4069

--- a/basekomp_net.vbproj
+++ b/basekomp_net.vbproj
@@ -418,6 +418,7 @@
   <ItemGroup>
     <EmbeddedResource Include="FORMS\frmAbout.resx">
       <DependentUpon>frmAbout.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FORMS\frmACT_OS_frmActTreb.resx">
       <DependentUpon>frmACT_OS_frmActTreb.vb</DependentUpon>
